ajustei os botões do slider

--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,7 @@ body {
     font-family: 'Netflix Sans Regular', sans-serif;
     background: black url(https://occ-0-4906-420.1.nflxso.net/dnm/api/v6/6AYY37jfdO6hpXcMjf9Yu5cnmO0/AAAABaKd32dWKMNPxW_lHqfzHGmBBww_6apUZSphyfDxWsz0aa4vKMIJ64mXxouXKXOzncqPa4nehjZ3VnNPDpeGNtkJHIub.webp?r=c30) no-repeat center;
     background-size: cover;
+    overflow-x: hidden;
 }
 
 .app {
