--- a/src/Body/Body.module.css
+++ b/src/Body/Body.module.css
@@ -1,11 +1,14 @@
-.body {
-    margin-bottom: 50px;
-}
 
 h1 {
     font-weight: 500;
     margin-top: 200px;
     margin-bottom: 50px;
+}
+
+.descricao {
+    width: 40vw;
+    font-size: 19px;
+    font-family: 'Netflix Sans Regular', 
 }
 
 .button1,
@@ -18,11 +21,18 @@ h1 {
     font-weight: 500;
     font-size: 16px;
 
-    margin-top: 50px;
+    margin-top: 20px;
 }
 
 .button2 {
     background-color: rgba(109, 109, 110, 0.7);
     color: white;
     margin-left: 12px;
+}
+
+.populares {
+    margin-top: 100px;
+    font-weight: 500;
+    font-size: 19px;
+    font-family: 'Netflix Sans Medium',
 }
